--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
                 android:orientation="vertical">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="385dp"
+                    android:layout_height="67dp"
                     android:layout_marginStart="18dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="18dp">
@@ -66,7 +66,7 @@
                     <ImageView
                         android:id="@+id/imageView"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="1dp"
                         android:layout_marginStart="16dp"
 
                         android:layout_marginTop="12dp"
@@ -75,6 +75,21 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/editTextText3"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/bell" />
+
+                    <ImageButton
+                        android:id="@+id/notif"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="14dp"
+                        android:layout_marginBottom="16dp"
+                        android:backgroundTint="#00FFFFFF"
+                        android:contentDescription="imag"
+                        android:onClick="onclick5"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/bell" />
 
@@ -220,7 +235,7 @@
                         android:id="@+id/moreback"
                         android:layout_width="100dp"
                         android:layout_height="50dp"
-                        android:layout_marginStart="295dp"
+                        android:layout_marginStart="298dp"
                         android:layout_marginEnd="10dp"
                         android:background="#00FFFFFF"
                         android:backgroundTint="#00FFFFFF"
@@ -270,7 +285,7 @@
                         android:id="@+id/peugeot"
                         android:layout_width="125dp"
                         android:layout_height="53dp"
-                        android:layout_marginEnd="283dp"
+                        android:layout_marginEnd="275dp"
                         android:background="#00FFFFFF"
                         android:backgroundTint="#00FFFFFF"
                         android:onClick="onclick4"
